--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,195 @@
-/* =============================================================================
-   HTML5 CSS Reset Minified - Eric Meyer
-   ========================================================================== */
-
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
-body{line-height:1}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-nav ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:before,blockquote:after,q:before,q:after{content:none}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration:none}
-mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
-del{text-decoration:line-through}
-abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
-table{border-collapse:collapse;border-spacing:0}
-hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
-input,select{vertical-align:middle}
-li{list-style:none}
-
-
-/* =============================================================================
-   My CSS
-   ========================================================================== */
-
-/* ---- base ---- */
-
-html,body{ 
-	width:100%;
-	height:100%;
-	background:#111;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+body {
+  line-height: 1;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+nav ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: none;
+}
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  text-decoration: none;
+}
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+del {
+  text-decoration: line-through;
+}
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+input,
+select {
+  vertical-align: middle;
+}
+li {
+  list-style: none;
 }
 
-html{
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background: #111;
+}
+
+html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body{
-  font:normal 75% Arial, Helvetica, sans-serif;
+body {
+  font: normal 75% Arial, Helvetica, sans-serif;
 }
 
-canvas{
-  display:block;
-  vertical-align:bottom;
+canvas {
+  display: block;
+  vertical-align: bottom;
 }
 /* ---- particles.js container ---- */
 
-#particles-js{
+#particles-js {
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: #000000;
-  background-image: url('');
+  background-image: url("");
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
 
-.header{
+.header {
   position: relative;
 }
 
-.box1{
+.box1 {
   position: relative;
   width: 100px;
-height: 100px;
-border: 1px solid black
-
+  height: 100px;
+  border: 1px solid black;
 }
 
-.particles-js-canvas-el{
+.particles-js-canvas-el {
   position: absolute;
 }
 
@@ -76,47 +198,47 @@ border: 1px solid black
   height: 700px;
   background-image: linear-gradient(163deg, #ff9900 0%, rgb(255, 145, 0) 100%);
   border-radius: 20px;
-  transition: all .3s;
+  transition: all 0.3s;
   position: absolute;
   z-index: 1;
   top: 150px;
   left: 50px;
- }
- 
- .card2 {
+}
+
+.card2 {
   width: 1000px;
   height: 700px;
   background-color: #1a1a1a;
-  border-radius:;
-  transition: all .2s;
+  border-radius: ;
+  transition: all 0.2s;
   position: absolute;
   z-index: 1;
- }
- 
- .card2:hover {
+}
+
+.card2:hover {
   transform: scale(0.98);
   border-radius: 20px;
   position: absolute;
   z-index: 1;
- }
- 
- .card:hover {
+}
+
+.card:hover {
   position: absolute;
   box-shadow: 0px 0px 30px 1px rgba(255, 166, 0, 0.712);
   z-index: 1;
- }
+}
 
- .textheader{
-  position:absolute;
+.textheader {
+  position: absolute;
   color: aliceblue;
   font-size: 30px;
   font-family: Dosis;
   top: 8px;
-  left: 24PX;
+  left: 24px;
   cursor: default;
- }
+}
 
- .Btn {
+.Btn {
   width: 45px;
   height: 45px;
   display: flex;
@@ -128,10 +250,10 @@ border: 1px solid black
   /* overflow: hidden; */
   border-radius: 7px;
   cursor: pointer;
-  transition: all .3s;
+  transition: all 0.3s;
   position: absolute;
   left: 1850px;
-  top:26px;
+  top: 26px;
 }
 
 .svgContainer {
@@ -144,7 +266,7 @@ border: 1px solid black
   backdrop-filter: blur(0px);
   letter-spacing: 0.8px;
   border-radius: 10px;
-  transition: all .3s;
+  transition: all 0.3s;
   border: 1px solid rgba(156, 156, 156, 0.466);
   position: absolute;
 }
@@ -158,7 +280,7 @@ border: 1px solid black
   z-index: -1;
   border-radius: 10px;
   pointer-events: none;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .Btn:hover .BG {
@@ -183,7 +305,7 @@ border: 1px solid black
   /* overflow: hidden; */
   border-radius: 7px;
   cursor: pointer;
-  transition: all .3s;
+  transition: all 0.3s;
   position: absolute;
   left: 1780px;
   top: 26px;
@@ -199,7 +321,7 @@ border: 1px solid black
   backdrop-filter: blur(0px);
   letter-spacing: 0.8px;
   border-radius: 10px;
-  transition: all .3s;
+  transition: all 0.3s;
   border: 1px solid rgba(156, 156, 156, 0.466);
   position: absolute;
 }
@@ -213,7 +335,7 @@ border: 1px solid black
   z-index: -1;
   border-radius: 10px;
   pointer-events: none;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .Btn2:hover .BG2 {
@@ -226,8 +348,8 @@ border: 1px solid black
   backdrop-filter: blur(10px);
 }
 
-.text1{
-  position:absolute;
+.text1 {
+  position: absolute;
   color: aliceblue;
   font-size: 100px;
   font-family: Yanone Kaffeesatz;
@@ -236,26 +358,28 @@ border: 1px solid black
   z-index: 2;
   text-align: center;
   cursor: default;
- }
- .text1:hover {
-  backdrop-filter:blur(99%);
+}
+.text1:hover {
+  backdrop-filter: blur(99%);
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
- }
+}
 
- @-webkit-keyframes glow {
+@-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #eeeeee67, 0 0 20px #eeeeee67, 0 0 30px #eeeeee67, 0 0 40px #eeeeee67, 
-                 0 0 50px #eeeeee67, 0 0 60px #eeeeee67, 0 0 70px #eeeeee67;
+    text-shadow: 0 0 10px #eeeeee67, 0 0 20px #eeeeee67, 0 0 30px #eeeeee67,
+      0 0 40px #eeeeee67, 0 0 50px #eeeeee67, 0 0 60px #eeeeee67,
+      0 0 70px #eeeeee67;
   }
   to {
-    text-shadow: 0 0 20px #eeeeee67, 0 0 30px #eeeeee67, 0 0 40px #eeeeee67, 0 0 50px #eeeeee67, 
-                 0 0 60px #eeeeee67, 0 0 70px #eeeeee67, 0 0 80px #eeeeee67;
+    text-shadow: 0 0 20px #eeeeee67, 0 0 30px #eeeeee67, 0 0 40px #eeeeee67,
+      0 0 50px #eeeeee67, 0 0 60px #eeeeee67, 0 0 70px #eeeeee67,
+      0 0 80px #eeeeee67;
   }
 }
 
-.text2{
+.text2 {
   position: absolute;
   color: aliceblue;
   font-size: 70px;
@@ -266,7 +390,7 @@ border: 1px solid black
   cursor: default;
 }
 
-.text3{
+.text3 {
   position: absolute;
   color: aliceblue;
   font-size: 70px;
@@ -277,7 +401,7 @@ border: 1px solid black
   cursor: default;
 }
 
-.text4{
+.text4 {
   position: absolute;
   color: aliceblue;
   font-size: 70px;
@@ -288,7 +412,7 @@ border: 1px solid black
   cursor: default;
 }
 
-.text5{
+.text5 {
   position: absolute;
   color: aliceblue;
   font-size: 70px;
@@ -299,7 +423,7 @@ border: 1px solid black
   cursor: default;
 }
 
-.photo1{
+.photo1 {
   position: absolute;
   z-index: 3;
   width: 600px;
